Correction de bug de l'interface utilisateur.